kubernetes/apps/jellyfin/jellyfin/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  hostnames:
    - jellyfin.garage.neo-tix.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: jellyfin
          namespace: jellyfin
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
